Fix alignment of filter buttons (#80)

--- a/source/wp-content/themes/wporg-developer/stylesheets/main.css
+++ b/source/wp-content/themes/wporg-developer/stylesheets/main.css
@@ -243,28 +243,6 @@ img {
   /* Adhere to container width. */
 }
 
-/* Form Elements */
-button,
-input,
-select,
-textarea {
-  font-size: 100%;
-  /* Corrects font size not being inherited in all browsers */
-  margin: 0;
-  /* Addresses margins set differently in IE6/7, F3/4, S5, Chrome */
-  vertical-align: baseline;
-  /* Improves appearance and consistency in all browsers */
-  *vertical-align: middle;
-  /* Improves appearance and consistency in all browsers */
-  font-weight: 300;
-}
-
-button,
-input {
-  line-height: normal;
-  /* Addresses FF3/4 setting line-height using !important in the UA stylesheet */
-}
-
 /* Alignment */
 .alignleft {
   display: inline;
@@ -511,30 +489,41 @@ input {
 .devhub-wrap input[type="button"].shiny-blue,
 .devhub-wrap input[type="reset"].shiny-blue,
 .devhub-wrap input[type="submit"].shiny-blue {
-  background-color: #21759b;
-  background-image: linear-gradient(to bottom, #2a95c5, #21759b);
-  border-color: #21759b;
-  border-bottom-color: #1e6a8d;
-  -webkit-box-shadow: inset 0 1px 0 rgba(120, 200, 230, 0.5);
-  box-shadow: inset 0 1px 0 rgba(120, 200, 230, 0.5);
+  background-color: #2271b1;
+  border-color: #2271b1;
+  border-bottom-color: #0a4b78;
   color: #fff;
   text-decoration: none;
-  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.3);
-  padding: 3px 8px;
 }
 
-.devhub-wrap a.button.shiny-blue:hover,
+.devhub-wrap a.button.shiny-blue:hover, .devhub-wrap a.button.shiny-blue:focus, .devhub-wrap a.button.shiny-blue:active,
 .devhub-wrap button.shiny-blue:hover,
+.devhub-wrap button.shiny-blue:focus,
+.devhub-wrap button.shiny-blue:active,
 .devhub-wrap input[type="button"].shiny-blue:hover,
+.devhub-wrap input[type="button"].shiny-blue:focus,
+.devhub-wrap input[type="button"].shiny-blue:active,
 .devhub-wrap input[type="reset"].shiny-blue:hover,
-.devhub-wrap input[type="submit"].shiny-blue:hover {
-  background-color: #278ab7;
-  background-image: linear-gradient(to bottom, #2e9fd2, #21759b);
-  border-color: #1b607f;
-  -webkit-box-shadow: inset 0 1px 0 rgba(120, 200, 230, 0.6);
-  box-shadow: inset 0 1px 0 rgba(120, 200, 230, 0.6);
+.devhub-wrap input[type="reset"].shiny-blue:focus,
+.devhub-wrap input[type="reset"].shiny-blue:active,
+.devhub-wrap input[type="submit"].shiny-blue:hover,
+.devhub-wrap input[type="submit"].shiny-blue:focus,
+.devhub-wrap input[type="submit"].shiny-blue:active {
+  background-color: #135e96;
+  border-color: #043959;
   color: #fff;
-  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.3);
+}
+
+.devhub-wrap a.button.shiny-blue:focus, .devhub-wrap a.button.shiny-blue:active,
+.devhub-wrap button.shiny-blue:focus,
+.devhub-wrap button.shiny-blue:active,
+.devhub-wrap input[type="button"].shiny-blue:focus,
+.devhub-wrap input[type="button"].shiny-blue:active,
+.devhub-wrap input[type="reset"].shiny-blue:focus,
+.devhub-wrap input[type="reset"].shiny-blue:active,
+.devhub-wrap input[type="submit"].shiny-blue:focus,
+.devhub-wrap input[type="submit"].shiny-blue:active {
+  box-shadow: 0 0 3px 1px #dba617;
 }
 
 .devhub-wrap a.button .dashicons,
@@ -1092,13 +1081,15 @@ input {
 .devhub-wrap .archive-filter-form {
   margin: 5rem 0;
   font-size: 1.5rem;
+  line-height: 1.5;
 }
 
+.devhub-wrap .archive-filter-form select,
 .devhub-wrap .archive-filter-form input[type="submit"] {
   margin-left: 0.5em;
-  padding: 0.2em 0.5em;
-  line-height: 1;
-  font-size: 1.5rem;
+  padding: 0.333em 1em;
+  font-size: inherit;
+  line-height: inherit;
 }
 
 .devhub-wrap .searchform {
